--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -1,3 +1,13 @@
 // Branding overrides
 //
 // Copy variables from `_branding.scss` to this file to override default values.
+
+$hbp-lightblue: #a4dbe8;
+$hbp-grey: #eeeeee;
+$hbp-yellow: #fbdd40;
+$hbp-navy: #1b365d;
+$hbp-red: #ff6d6a;
+
+$primary: $hbp-grey;
+$secondary: #1b365d;
+$tertiary: #ff6d6a;
