--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -8,6 +8,6 @@ $hbp-yellow: #fbdd40;
 $hbp-navy: #1b365d;
 $hbp-red: #ff6d6a;
 
-$primary: $hbp-grey;
-$secondary: #1b365d;
-$tertiary: #ff6d6a;
+$primary: $hbp-navy;
+$secondary: $hbp-navy;
+$tertiary: $hbp-red;
