--- a/app/client/stylesheets/site.scss
+++ b/app/client/stylesheets/site.scss
@@ -1,7 +1,9 @@
-@import 'branding';
-@import 'custom';
-$font-body: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
-$font-header: 'Montserrat', 'Helvetica Neue', 'Helvetica', sans-serif;
+@import "branding";
+@import "custom";
+// Import Nunito
+@import url("https://fonts.googleapis.com/css?family=Nunito:200,300,400,700");
+$font-body: "Nunito", "Helvetica Neue", "Helvetica", sans-serif;
+$font-header: "Nunito", "Helvetica Neue", "Helvetica", sans-serif;
 
 // Login screen variables
 $login-bg-color: $secondary;
@@ -9,7 +11,7 @@ $login-color: $primary;
 $register-color: $tertiary;
 
 $status-unverified-color: rgb(82, 82, 82);
-$status-incomplete-color: #F5F5F5;
+$status-incomplete-color: #f5f5f5;
 $status-submitted-color: lighten($secondary, 20%);
 $status-admitted-color: $primary;
 $status-confirmed-color: $secondary;
@@ -21,7 +23,7 @@ $status-rejected-color: red; // Not used
 // Sidebar variables
 $sidebar-color: $primary;
 $sidebar-width: 265px;
-$sidebar-transition-time: .5s;
+$sidebar-transition-time: 0.5s;
 $sidebar-tab-size: 55px;
 
 // Page variables
@@ -33,7 +35,7 @@ $brand-tertiary: $tertiary;
 
 @mixin transform($transforms) {
   -webkit-transform: $transforms;
-          transform: $transforms;
+  transform: $transforms;
 }
 
 @mixin transition-duration($duration) {
@@ -41,15 +43,15 @@ $brand-tertiary: $tertiary;
   transition-duration: $duration;
 }
 
-@import 'login';
-@import 'base';
-@import 'sidebar';
-@import 'page';
-@import 'dashboard';
-@import 'application';
-@import 'verify';
-@import 'team';
-@import 'admin';
+@import "login";
+@import "base";
+@import "sidebar";
+@import "page";
+@import "dashboard";
+@import "application";
+@import "verify";
+@import "team";
+@import "admin";
 
 html,
 body {
@@ -60,7 +62,7 @@ body {
 
 body {
   margin: 0;
-  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+  font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
   font-weight: 300;
 
   > .container {
@@ -120,7 +122,7 @@ fieldset {
   border: none;
 }
 
-.ui.search >.results {
+.ui.search > .results {
   width: 100%;
 }
 // @import 'animation';
