changed hackmit to hackbeanpot. please workgit add -A

--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -97,15 +97,8 @@
         </div>
 
         <div class="field">
-          <label>I would describe myself as a...</label>
-          <input type="text"
-                 placeholder="Designer, Data Scientist, iOS Wizard, Hacker Extraordinaire"
-                 ng-model="user.profile.description">
-        </div>
-
-        <div class="field">
           <label>
-              What would you like to learn or get out of HackMIT? (optional)
+              What would you like to learn or get out of HackBeanpot? (optional)
           </label>
           <textarea ng-model="user.profile.essay">
           </textarea>
