finalized updating our style?

--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -7,6 +7,8 @@ $hbp-grey: #eeeeee;
 $hbp-yellow: #fbdd40;
 $hbp-navy: #1b365d;
 $hbp-red: #ff6d6a;
+$hbp-purple: #5461c8;
+$hbp-green: #70e0a3;
 
 $primary: $hbp-navy;
 $secondary: $hbp-navy;
