--- a/app/client/stylesheets/_sidebar.scss
+++ b/app/client/stylesheets/_sidebar.scss
@@ -2,7 +2,7 @@
   height: 100%;
   position: fixed;
   background: $sidebar-color;
-  color: $hbp-navy;
+  color: white;
   width: $sidebar-width;
   z-index: 999;
   overflow: auto;
