fix env to make mongo work

--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -22,3 +22,7 @@ $tertiary: $hbp-red;
 .ui.pink.button {
   background-color: $hbp-green;
 }
+
+.title {
+  text-transform: capitalize !important;
+}
