--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -187,7 +187,7 @@
             <label>
                 Are there any specific topics/technologies you'd be interested in attending a talk or workshop about? (i.e. React, team-building, UI/UX, career development)
             </label>
-            <textarea ng-model="user.profile.topics-technologies">
+            <textarea ng-model="user.profile.topicsTechnologies">
             </textarea>
         </div>
 
@@ -197,7 +197,7 @@
             <label>Any food restrictions or allergies?</label>
             <input type="text"
                    placeholder="Dietary Restrictions"
-                   ng-model="user.profile.dietary-restrictions">
+                   ng-model="user.profile.dietaryRestrictions">
         </div>
   
         <br>
