--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -134,7 +134,7 @@
           <label>What’s your background? Are you a chemical engineer? A web developer? An entrepreneur? A marketing specialist? An artist? A biologist? Or just a curious mind?</label>
           <input type="text"
                  placeholder="Give us a snapshot of your skillset!"
-                 ng-model="user.profile.description">
+                 ng-model="user.profile.background">
         </div>
 
         <br>
@@ -178,7 +178,7 @@
             <label>What’s a hackathon without doing random things at random times? List some activities you would like to participate in: (i.e. yoga, coding challenges,  minute to win it games)</label>
             <input type="text"
                    placeholder="Activities"
-                   ng-model="user.profile.description">
+                   ng-model="user.profile.activities">
         </div>
   
         <br>
@@ -187,7 +187,7 @@
             <label>
                 Are there any specific topics/technologies you'd be interested in attending a talk or workshop about? (i.e. React, team-building, UI/UX, career development)
             </label>
-            <textarea ng-model="user.profile.essay">
+            <textarea ng-model="user.profile.topicsTechnologies">
             </textarea>
         </div>
 
@@ -197,7 +197,7 @@
             <label>Any food restrictions or allergies?</label>
             <input type="text"
                    placeholder="Dietary Restrictions"
-                   ng-model="user.profile.description">
+                   ng-model="user.profile.dietaryRestrictions">
         </div>
   
         <br>
@@ -225,7 +225,7 @@
             <label>If you could have any superpower what would it be?</label>
             <input type="text"
                    placeholder="Superpower"
-                   ng-model="user.profile.description">
+                   ng-model="user.profile.superpower">
           </div>
 
           <br>
@@ -234,7 +234,7 @@
               <label>Finally, anything else you want us to know about you?</label>
               <input type="text"
                      placeholder="If not, what’s your favorite animal?"
-                     ng-model="user.profile.description">
+                     ng-model="user.profile.animal">
           </div>
 
         <br>
