--- a/app/client/stylesheets/_branding.scss
+++ b/app/client/stylesheets/_branding.scss
@@ -4,8 +4,8 @@
  * tertiary (default blue): waitlist/declined dashboard status
  */
 
-$primary: #e76482;
-$secondary: #473899;
+$primary: #bdf1a3;
+$secondary: #1b365d;
 $tertiary: #4c82cc;
 
 /** ASSET URLS
