fixed styling + dates

--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -10,6 +10,18 @@ $hbp-red: #ff6d6a;
 $hbp-purple: #5461c8;
 $hbp-green: #70e0a3;
 
+// 2020 COLORS
+
+$yellow-green: #E0F36D;
+$yellow-green-disabled: #F0FDA3;
+$yellow-green-hover: #CAE339;
+
+$dark-green: #439A6B;
+$not-so-dark-green: #7AC09A;
+
+$white: #fff;
+$darker-hbp-navy: #102037;
+
 $primary: $hbp-navy;
 $secondary: $hbp-navy;
 $tertiary: $hbp-red;
