--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -241,7 +241,7 @@
 
         <div class="thank you">
           <p>
-              Thanks for your interest! We can’t wait to learn about you! We will let you know by the week of January 14, 2019 if you have a ticket or if you’ll be on our waitlist. Stay tuned! 
+              Thanks for your interest! We can’t wait to learn about you! We will let you know by the week of January 13, 2020 if you have a ticket or if you’ll be on our waitlist. Stay tuned! 
           </p>
           <p>
               If you have any questions in the meantime, feel free to reach out to us at team@hackbeanpot.com, and visit our website https://hackbeanpot.com. Check out our social media @hackbeanpot to stay up to date with the latest HackBeanpot news!
@@ -252,7 +252,7 @@
 
         <div class="field" ng-hide="regIsClosed">
           <button type="submit"
-                  class="fluid ui purple button"
+                  class="fluid ui button primary-cta"
                   ng-click="submitForm()">
             Submit
           </button>
