--- a/app/client/views/dashboard/dashboard.html
+++ b/app/client/views/dashboard/dashboard.html
@@ -8,7 +8,7 @@
         Hey there! Looking to hack together a super cool project, eat some midnight snacks, and get connected to the local Boston tech scene? You’ve come to the right place! HackBeanpot is Boston’s annual hackathon for wonderful people like you. Don’t worry if you don’t have much CS experience; we welcome students of all backgrounds! HackBeanpot 2020 will be hosted from February 7-9 at Catalant Technologies.
     </p>
     <p>
-        If you are interested in attending, please complete this form by January 11, 2019! Check out our website for more info about the event: https://hackbeanpot.com.
+        If you are interested in attending, please complete this form by January 10, 2020! Check out our website for more info about the event: https://hackbeanpot.com.
     </p>
   </div>
 
@@ -76,7 +76,7 @@
           <strong>
             Registration Deadline:
           </strong>
-          {{ timeClose }}
+          {{ timeClose }})
         </div>
 
         <div
@@ -100,7 +100,7 @@
             {{ DASHBOARD.INCOMPLETE }}
           </p>
 
-          <div class="ui purple button"
+          <div class="ui button primary-cta"
                ui-sref="app.application">
             Complete your application
           </div>
