--- a/app/client/views/reset/reset.html
+++ b/app/client/views/reset/reset.html
@@ -33,7 +33,7 @@
             <div class="field">
               <button id="reset-password"
                       type="submit"
-                      class="fluid ui login button">
+                      class="fluid ui button primary-cta">
                       Reset Password
               </button>
             </div>
