--- a/app/client/stylesheets/_page.scss
+++ b/app/client/stylesheets/_page.scss
@@ -2,12 +2,11 @@
   padding-top: 2em;
   padding-bottom: 4em;
   .title {
-    font-family: $font-header;
+    font-family: $font-body;
     text-transform: uppercase;
     font-size: 2.5em;
     text-align: center;
     color: $page-header-color;
-    letter-spacing: 8px;
     font-weight: 700;
     &.divided:after {
         content: " ";
@@ -19,7 +18,6 @@
 
     &.small {
       font-size: 1em;
-      letter-spacing: 4px;
       &:after {
         border-width: 2px;
       }
@@ -29,7 +27,6 @@
   .form {
     .title {
       font-size: 1em;
-      letter-spacing: 4px;
       &:after {
         border-width: 2px;
       }
