--- a/app/client/views/login/login.html
+++ b/app/client/views/login/login.html
@@ -83,7 +83,7 @@
           </a>
         </div>
 
-        <div ng-show="loginState === 'forgot'" class="forgot">
+        <div ng-show="loginState === 'forgot'" class="forgot inline-link">
           <a href="#" ng-click="setLoginState('login')">
             {{regIsOpen ? 'Login or Register' : 'Login'}}
           </a>
