round 1 of critiques

--- a/app/client/views/team/team.html
+++ b/app/client/views/team/team.html
@@ -27,6 +27,10 @@
 
           <br>
 
+          <p> In order to create a team, please enter a unique name below. In order to join an existing team, enter the name below. Make sure you confirm that everyone on your team is expected! </p>
+
+          <br>
+
           <div class="field">
             <input
               class="ui input"
