--- a/app/client/views/dashboard/dashboard.html
+++ b/app/client/views/dashboard/dashboard.html
@@ -5,10 +5,10 @@
 
   <div class="welcome">
     <p>
-        Hey there! Looking to hack together a super cool project, eat some midnight snacks, and get connected to the local Boston tech scene? You’ve come to the right place! HackBeanpot is Boston’s annual hackathon for wonderful people like you. Don’t worry if you don’t have much CS experience; we welcome students of all backgrounds! HackBeanpot 2020 will be hosted from February 7-9 at Catalant Technologies.
+      Hey there! Welcome to the application portal for HackBeanpot 2020. HackBeanpot is an annual student-run hackathon for anyone interested in hacking together a cool project, eating midnight snacks, and connecting with Boston’s tech scene. Don’t worry if you don’t have much CS experience; we welcome students of all backgrounds! HackBeanpot 2020 will be hosted from February 7-9, 2020 at Catalant Technologies.
     </p>
     <p>
-        If you are interested in attending, please complete this form by January 10, 2020! Check out our website for more info about the event: https://hackbeanpot.com.
+      If you are interested in attending, please complete this form by Friday, January 10, 2020. Feel free to visit our website for more information: https://hackbeanpot.com.
     </p>
   </div>
 
