--- a/app/client/views/dashboard/dashboard.html
+++ b/app/client/views/dashboard/dashboard.html
@@ -76,7 +76,7 @@
           <strong>
             Registration Deadline:
           </strong>
-          {{ timeClose }})
+          {{ timeClose }}
         </div>
 
         <div
@@ -85,7 +85,7 @@
           <strong>
             Confirmation Deadline:
           </strong>
-          {{ timeConfirm }})
+          {{ timeConfirm }}
         </div>
 
         <div
