Fixed email + somewhere else

--- a/app/client/views/dashboard/dashboard.html
+++ b/app/client/views/dashboard/dashboard.html
@@ -179,7 +179,7 @@
 
           <div class="markdown">
             <h4>
-                {{ DASHBOARD.ADMITTED_AND_CAN_CONFIRM_TITLE }})
+                {{ DASHBOARD.ADMITTED_AND_CAN_CONFIRM_TITLE }}
             </h4>
           </div>
 
