--- a/app/server/emails/email-verify/html.pug
+++ b/app/server/emails/email-verify/html.pug
@@ -32,7 +32,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                             td.bodyContent(valign='top', style='text-align: center', mc:edit='body_content00')
                               h1 Verify Your Email
                               h3 Thanks for signing up for #{hackathonName}!
-                              |                                                 To verify your email, click the button below. #{verifyUrl}!
+                              |                                                 To verify your email, click the button below. 
                               br
                               br
                               br
