--- a/app/client/views/confirmation/confirmation.html
+++ b/app/client/views/confirmation/confirmation.html
@@ -102,19 +102,6 @@
                    ng-model="user.confirmation.twitter">
           </div>
 
-          <div class="field">
-            <label> Skill Sheet (required) </label>
-            <p>
-              Upload a document outlining any skills or experience you'd like to share (ex. resume). PDF preferred!
-            </p>
-            <a
-              target="_blank"
-              href="https://go.hackmit.org/skill-sheets"
-              class="ui pink button">
-              Upload
-            </a>
-          </div>
-
           <br>
           <br>
 
@@ -308,7 +295,7 @@
 
           <div class="field" ng-hide="regIsClosed">
             <button type="submit"
-                    class="fluid ui purple button"
+                    class="fluid ui button primary-cta"
                     ng-click="submitForm()">
               Submit
             </button>
