--- a/app/client/views/login/login.html
+++ b/app/client/views/login/login.html
@@ -77,14 +77,14 @@
 
         <div class="ui divider"></div>
 
-        <div ng-show="loginState === 'login'" class="forgot inline-link">
-          <a href="#" ng-click="setLoginState('forgot')">
+        <div ng-show="loginState === 'login'" class="forgot">
+          <a href="#" class="inline-link" ng-click="setLoginState('forgot')">
             Forgot Password?
           </a>
         </div>
 
-        <div ng-show="loginState === 'forgot'" class="forgot inline-link">
-          <a href="#" ng-click="setLoginState('login')">
+        <div ng-show="loginState === 'forgot'" class="forgot">
+          <a href="#" class="inline-link" ng-click="setLoginState('login')">
             {{regIsOpen ? 'Login or Register' : 'Login'}}
           </a>
         </div>
