--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -108,12 +108,14 @@
         <label>Graduation Year</label>
         <select
           name="year"
-          ng-model="selectedUser.profile.graduationYear">
-          <option value="">Graduation Year</option>
-          <option value="2016">2016</option>
-          <option value="2017">2017</option>
-          <option value="2018">2018</option>
-          <option value="2019">2019</option>
+          ng-model="selectedUser.profile.year">
+          <option value="H">High School</option>
+          <option value="1">1st Year</option>
+          <option value="2">2nd Year</option>
+          <option value="3">3rd Year</option>
+          <option value="4">4th Year</option>
+          <option value="5">5th Year (and up)</option>
+          <option value="G">Graduate Student</option>
         </select>
       </div>
 
@@ -131,35 +133,60 @@
       </div>
 
       <div class="field">
-        <label>I would describe myself as a...</label>
+        <label>Ethnicity</label>
+        <select
+          name="ethnicity"
+          ng-model="selectedUser.profile.ethnicity">
+          <option value="A">American Indian or Alaska Native</option>
+          <option value="B">Asian</option>
+          <option value="C">Black or African American</option>
+          <option value="D">Hispanic or Latino</option>
+          <option value="E">Native Hawaiian or Pacific Islander</option>
+          <option value="F">White</option>
+          <option value="G">Two or more races</option>
+          <option value="H">Other</option>
+        </select>
+      </div>
+
+
+      <div class="field">
+        <label>What's your favorite hype song?</label>
         <input type="text"
-               placeholder="Designer, Data Scientist, iOS Wizard, Hacker Extraordinaire"
-               ng-model="selectedUser.profile.description">
+                ng-model="selectedUser.profile.hypesong">
+      </div>
+
+      <div class="field">
+        <label>What flavored jellybean would you be and why? (Doesn’t have to be a real flavor ;))</label>
+        <input type="text"
+                ng-model="selectedUser.profile.jellybean">
+      </div>
+
+      <div class="field">
+        <label>What’s your background? What could you talk for hours about? Give us a snapshot of who you are and your journey in tech.</label>
+        <input type="text"
+                ng-model="selectedUser.profile.background">
+      </div>
+
+      <div class="field">
+        <label>What kind of activities, talks, or workshops would you like to attend at HackBeanpot? (Ex. Yoga, professional development talk, React workshop, etc.)</label>
+        <input type="text"
+                ng-model="selectedUser.profile.activities">
+      </div>
+
+      <div class="field">
+          <label>
+            What kind of ideas or topics would you be interested in exploring at HackBeanpot? (Your answer won’t affect your admission)
+          </label>
+          <textarea placeholder="Ideas or topics" ng-model="selectedUser.profile.topicsTechnologies">
+          </textarea>
       </div>
 
       <div class="field">
         <label>
-            What would you like to learn or get out of HackMIT? (optional)
+          Our theme is “Sprout” this year, which represents growth in new skills, relationships, and experiences. With this in mind, what are you hoping to get out of HackBeanpot? What do you want to walk away having learned or experienced?
         </label>
         <textarea ng-model="selectedUser.profile.essay">
         </textarea>
-      </div>
-
-      <div class="field"
-           ng-hide="isMitStudent">
-        <p>
-          Because of limitations imposed by MIT, we are not legally allowed to host
-          non-MIT minors (those under 18) for HackMIT 2015. Checking the box below affirms that you are or will be 18 years or older by September 19th, 2015.
-        </p>
-        <p>
-          <strong>
-          We will be checking ID. If you are a non-MIT minor, you will be turned away at the door.
-          </strong>
-        </p>
-        <div class="ui checkbox">
-          <input type="checkbox" id="adult" ng-model="selectedUser.profile.adult">
-          <label for="adult">I am 18 or older.</label>
-        </div>
       </div>
 
       <div class="field">
@@ -203,6 +230,11 @@
       <div class="field">
         <label> Major </label>
         <input type="text" ng-model="selectedUser.profile.major" />
+      </div>
+
+      <div class="field">
+        <label>Minor</label>
+        <input type="text" ng-model="selectedUser.profile.minor">
       </div>
 
       <div class="field">
