--- a/app/client/views/confirmation/confirmation.html
+++ b/app/client/views/confirmation/confirmation.html
@@ -126,6 +126,14 @@
           </div>
 
           <div class="field">
+              <label> Website </label>
+              <input type="text"
+                     name="website"
+                     placeholder="hackername.com"
+                     ng-model="user.confirmation.website">
+            </div>
+
+          <div class="field">
             <label> Skill Sheet (required) </label>
             <p>
               Upload a document outlining any skills or experience you'd like to share (ex. resume). PDF preferred!
