--- a/app/client/stylesheets/_dashboard.scss
+++ b/app/client/stylesheets/_dashboard.scss
@@ -2,7 +2,7 @@
   .status {
     text-align: center;
     p {
-      text-align: left;
+      text-align: center;
     }
     .button {
       margin-top: 12px;
@@ -60,7 +60,6 @@
   .description {
     margin-bottom: 24px;
     .markdown {
-      text-align: left;
       margin-bottom: 24px;
     }
   }
