--- a/app/client/stylesheets/_base.scss
+++ b/app/client/stylesheets/_base.scss
@@ -35,3 +35,15 @@
 .danger-button:hover {
   background-color: #d9593f !important;
 }
+
+
+a.inline-link {
+  color: $dark-green;
+  transition: color 0.3s ease;
+
+  &:hover {
+    color: $not-so-dark-green;
+    text-decoration: underline;
+  }
+}
+
