--- a/app/server/emails/email-link-action/html.pug
+++ b/app/server/emails/email-link-action/html.pug
@@ -36,7 +36,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                               br
                               br
                               br
-                              a.pink.button(href=actionUrl)
+                              a.button(href=actionUrl  style="background-color: #E0F36D; color: #1b365d; padding: 12px 24px; text-decoration: none; font-weight: bold;")
                                 | #{actionName}
                           tr
                             td.bodyContent(valign='top', style='text-align: center', mc:edit='body_content00')
@@ -51,12 +51,14 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                         tbody
                           tr
                             td.footerContent(valign='top', mc:edit='footer_content00')
-                              a(href='https://twitter.com/' + twitterHandle) Follow on Twitter
+                              a(href='https://twitter.com/' + twitterHandle) Follow on 
+                              br
                               a(href='https://facebook.com/' + facebookHandle) Like on Facebook
+                              br
                               a(href='mailto:' + emailAddress) Email Us
                           tr
                             td.footerContent(valign='top', style='padding-top:0;', mc:edit='footer_content01')
-                              em Copyright © #{hackathonName} 2017, All rights reserved.
+                              em Copyright © #{hackathonName}, All rights reserved.
                               br
                       // // END FOOTER
                       // // END TEMPLATE
