--- a/app/client/stylesheets/site.scss
+++ b/app/client/stylesheets/site.scss
@@ -146,4 +146,13 @@ fieldset {
   vertical-align: middle;
 }
 
+.checkbox-label {
+  display: block;
+  margin: 0 0 .28571429rem 0;
+  color: rgba(0,0,0,.87);
+  font-size: .92857143em;
+  font-weight: 700;
+  text-transform: none;
+}
+
 // @import 'animation';
