--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -165,7 +165,7 @@
         <br>
 
         <div class="field">
-            <label>Send us a Google Drive link to your resume (in PDF format)  - This is not for us to look at! We will simply pass your resume on to our sponsors.</label>
+            <label>Send us a Google !!! Drive link to your resume (in PDF format)  - This is not for us to look at! We will simply pass your resume on to our sponsors.</label>
             <input type="text"
                    placeholder="Your Resume"
                    ng-model="user.profile.resume">    
